// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > builds all packages from root 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
]
`;

exports[`build > concurrent builds from different directories both succeed 1`] = `
[
  "rpc.build x2",
]
`;

exports[`build > handles 4 concurrent builds without crashing 1`] = `
[
  "rpc.build x4",
]
`;

exports[`build > scoped build from child package only builds that package and deps 1`] = `
[
  "rpc.build[working_dir=packages/app]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.incremental_build[module_count=2]",
  "      build.parse[dirty_modules=2]",
  "      build.compile",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=Library]",
  "        build.compile_wave[file_count=1]",
  "          build.compile_file[module=App]",
]
`;

exports[`build > second build reuses daemon state 1`] = `
[
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=10]",
  "      build.compile",
  "        build.compile_wave[file_count=7]",
  "          build.compile_file[module=Helper-DaemonTestNS]",
  "          build.compile_file[module=Library]",
  "          build.compile_file[module=Main]",
  "          build.compile_file[module=ModuleWithInterface]",
  "          build.compile_file[module=PostBuild]",
  "            build.js_post_build[command=node post-build.mjs, js_file=packages/with-post-build/src/PostBuild.mjs]",
  "              build.js_post_build_stdout",
  "          build.compile_file[module=Sample]",
  "          build.compile_file[module=Test]",
  "        build.compile_wave[file_count=3]",
  "          build.compile_file[module=App]",
  "          build.compile_file[module=Consumer-DaemonTestNS]",
  "        build.compile_wave[file_count=2]",
  "          build.compile_file[module=Root]",
  "rpc.build[working_dir=.]",
  "  work_queue.handle_build",
  "    build.initialize_packages",
  "    build.load_package_sources[package=@daemon-test/app]",
  "    build.load_package_sources[package=@daemon-test/library]",
  "    build.load_package_sources[package=@daemon-test/namespaced]",
  "    build.load_package_sources[package=@daemon-test/with-dev-deps]",
  "    build.load_package_sources[package=@daemon-test/with-interface]",
  "    build.load_package_sources[package=@daemon-test/with-post-build]",
  "    build.load_package_sources[package=@daemon-test/with-warnings]",
  "    build.load_package_sources[package=daemon-test-fixture]",
  "    build.incremental_build[module_count=11]",
  "      build.parse[dirty_modules=0]",
  "      build.compile",
  "        build.compile_wave[file_count=0]",
]
`;
